--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "scripts": {
         "decode": "secret-coder --decode --config ./secret.config.json",
         "encode": "secret-coder --encode --config ./secret.config.json",
-        "build": "rimraf ./dist && npm run lint && tsc",
+        "build": "rimraf ./dist && npm run lint && tsc && json-key-remover",
         "start": "node ./dist/app.js --config ./config.toml",
         "dev": "ts-node ./src/app.ts --config ./config.toml",
         "lint": "eslint \"./src/**/*.{js,ts}\" --quiet --fix && tsc --noEmit",
         "lint:tests": "eslint \"./tests/**/*.{js,ts}\" --quiet --fix",
         "test": "mocha -r ts-node/register --config ./tests/mocha.unit.config.json && mocha -r ts-node/register --config ./tests/mocha.e2e.config.json",
         "test:unit": "mocha -r ts-node/register --config ./tests/mocha.unit.config.json",
-        "test:e2e": "mocha -r ts-node/register --config ./tests/mocha.e2e.config.json"
+        "test:e2e": "mocha -r ts-node/register --config ./tests/mocha.e2e.config.json",
+        "nest": "nest"
     },
     "repository": {
         "type": "git",
@@ -35,6 +36,7 @@
         "@types/chai": "^4.2.11",
         "@types/chai-http": "^4.2.0",
         "@types/chalk": "^2.2.0",
+        "@types/find-package-json": "^1.1.1",
         "@types/mocha": "^7.0.2",
         "@types/node": "^14.0.14",
         "@typescript-eslint/eslint-plugin": "^3.4.0",
@@ -46,6 +48,40 @@
         "rimraf": "^3.0.2",
         "secret-coder": "0.0.2",
         "ts-node": "^8.10.2",
-        "typescript": "^3.9.5"
+        "typescript": "^3.9.5",
+        "json-key-remover": "^0.0.2"
+    },
+    "dependencies": {
+        "@iarna/toml": "^2.2.5",
+        "@nestjs/common": "^7.2.0",
+        "@nestjs/core": "^7.2.0",
+        "@nestjs/platform-express": "^7.2.0",
+        "chalk": "^4.1.0",
+        "commander": "^5.1.0",
+        "find-package-json": "^1.2.0",
+        "json-from-default-schema": "0.0.1",
+        "jtomler": "0.0.5",
+        "reflect-metadata": "^0.1.13",
+        "rxjs": "^6.5.5"
+    },
+    "remover": {
+        "target": "./package.json",
+        "destination": "./dist/package.json",
+        "remove": [
+            "remover",
+            "devDependencies",
+            "description",
+            "main",
+            "scripts",
+            "repository",
+            "keywords",
+            "homepage",
+            "bugs"
+        ],
+        "add": {
+            "scripts/start": "node ./app.js --config ./config.toml",
+            "scripts/help": "node ./app.js -h",
+            "scripts/version": "node ./app.js -v"
+        }
     }
 }
