--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Template for nodejs with typescript",
     "main": "app.js",
     "scripts": {
+        "ncu": "ncu",
         "decode": "secret-coder --decode --config ./secret.config.json",
         "encode": "secret-coder --encode --config ./secret.config.json",
         "build": "rimraf ./dist && npm run lint && tsc && json-key-remover",
@@ -13,7 +14,8 @@
         "lint:tests": "eslint \"./tests/**/*.{js,ts}\" --quiet --fix",
         "test": "mocha -r ts-node/register --config ./tests/mocha.unit.config.json && mocha -r ts-node/register --config ./tests/mocha.e2e.config.json",
         "test:unit": "mocha -r ts-node/register --config ./tests/mocha.unit.config.json",
-        "test:e2e": "mocha -r ts-node/register --config ./tests/mocha.e2e.config.json"
+        "test:e2e": "mocha -r ts-node/register --config ./tests/mocha.e2e.config.json",
+        "publish": "npm run build && cd ./dist && npm publish"
     },
     "repository": {
         "type": "git",
@@ -34,19 +36,21 @@
         "@types/chai-http": "^4.2.0",
         "@types/chalk": "^2.2.0",
         "@types/find-package-json": "^1.1.1",
-        "@types/mocha": "^7.0.2",
-        "@types/node": "^14.0.14",
-        "@typescript-eslint/eslint-plugin": "^3.4.0",
-        "@typescript-eslint/parser": "^3.4.0",
+        "@types/mocha": "^8.0.0",
+        "@types/node": "^14.0.22",
+        "@typescript-eslint/eslint-plugin": "^3.6.0",
+        "@typescript-eslint/parser": "^3.6.0",
         "chai": "^4.2.0",
         "chai-http": "^4.3.0",
-        "eslint": "^7.3.1",
+        "eslint": "^7.4.0",
+        "json-key-remover": "^0.0.2",
         "mocha": "^8.0.1",
+        "ncp": "^2.0.0",
+        "npm-check-updates": "^7.0.1",
         "rimraf": "^3.0.2",
         "secret-coder": "0.0.2",
         "ts-node": "^8.10.2",
-        "typescript": "^3.9.5",
-        "json-key-remover": "^0.0.2"
+        "typescript": "^3.9.6"
     },
     "dependencies": {
         "@iarna/toml": "^2.2.5",
