--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "up": "ncu && ncu -u && rimraf ./package-lock.json && npm i",
         "ncu": "ncu",
+        "pub": "npm run build && npm publish ./dist && rimraf ./dist",
         "build": "rimraf ./dist && npm run lint && tsc && json-key-remover && copy-files-from-to",
         "start": "node ./dist/app.js --config ./config.toml",
         "dev": "ts-node ./src/app.ts --config ./config.toml",
