--- a/package.json
+++ b/package.json
@@ -31,35 +31,36 @@
     },
     "homepage": "https://github.com/samurayii/template-project-ts.git#readme",
     "devDependencies": {
-        "@types/chai": "^4.2.11",
+        "@types/chai": "^4.2.12",
         "@types/chai-http": "^4.2.0",
         "@types/chalk": "^2.2.0",
         "@types/find-package-json": "^1.1.1",
         "@types/koa-helmet": "^5.2.0",
         "@types/koa-logger": "^3.1.1",
-        "@types/mocha": "^8.0.0",
-        "@types/node": "^14.0.22",
-        "@typescript-eslint/eslint-plugin": "^3.6.0",
-        "@typescript-eslint/parser": "^3.6.0",
+        "@types/mocha": "^8.0.3",
+        "@types/node": "^14.6.0",
+        "@typescript-eslint/eslint-plugin": "^3.10.1",
+        "@typescript-eslint/parser": "^3.10.1",
         "chai": "^4.2.0",
         "chai-http": "^4.3.0",
         "copy-files-from-to": "^3.1.4",
-        "eslint": "^7.4.0",
+        "eslint": "^7.7.0",
         "json-key-remover": "^0.0.2",
-        "mocha": "^8.0.1",
-        "npm-check-updates": "^7.0.1",
+        "mocha": "^8.1.1",
+        "npm-check-updates": "^7.1.1",
         "rimraf": "^3.0.2",
-        "ts-node": "^8.10.2",
-        "typescript": "^3.9.6"
+        "ts-node": "^9.0.0",
+        "typescript": "^4.0.2"
     },
     "dependencies": {
         "ajv": "^6.12.4",
         "chalk": "^4.1.0",
-        "commander": "^5.1.0",
+        "commander": "^6.0.0",
         "di-ts-decorators": "0.0.3",
         "find-package-json": "^1.2.0",
-        "json-from-default-schema": "^0.0.1",
+        "json-from-default-schema": "^0.1.4",
         "jtomler": "^0.0.5",
+        "koa-body": "^4.2.0",
         "koa-helmet": "^5.2.0",
         "koa-logger": "^3.2.1",
         "koa-ts-decorators": "0.0.8"
