--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
     "version": "0.0.1",
     "description": "Template for nodejs app with typescript",
     "main": "app.js",
+    "docker_image": "samuray/app-template",
+    "directories": {
+        "lib": "lib",
+        "api": "api"
+    },
+    "bin": {
+        "app-template": "./app.js"
+    },
     "scripts": {
         "up": "ncu && ncu -u && rimraf ./package-lock.json && npm i",
         "ncu": "ncu",
