--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "build": "rimraf ./dist && npm run lint && tsc && json-key-remover && copy-files-from-to --mode build",
         "start": "node ./dist/app.js --config ./config.toml",
         "start:dev": "ts-node ./src/app.ts --config ./config.toml",
+        "start:bundle": "ts-node ./bundle/app.js --config ./config.toml",
+        "start:ob": "ts-node ./ob/app.js --config ./config.toml",
         "lint": "eslint \"./src/**/*.{js,ts}\" --quiet --fix && tsc --noEmit",
         "lint:tests": "eslint \"./tests/**/*.{js,ts}\" --quiet --fix",
         "test": "mocha -r ts-node/register --config ./tests/mocha.unit.config.json && mocha -r ts-node/register --config ./tests/mocha.e2e.config.json",
