--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
         "start:ob": "ts-node ./ob/app.js --config ./config.toml",
         "lint": "eslint \"./src/**/*.{js,ts}\" --quiet --fix && tsc --noEmit",
         "lint:tests": "eslint \"./tests/**/*.{js,ts}\" --quiet --fix",
-        "test": "mocha -r ts-node/register --config ./tests/mocha.unit.config.json && mocha -r ts-node/register --config ./tests/mocha.e2e.config.json",
+        "test": "npm run test:unit && npm run test:e2e",
         "test:unit": "mocha -r ts-node/register --config ./tests/mocha.unit.config.json",
-        "test:e2e": "mocha -r ts-node/register --config ./tests/mocha.e2e.config.json",
+        "test:e2e": "start-server-and-test e2e:start-server http://localhost:3001/api/healthcheck e2e:start-tests",
+        "e2e:start-server": "ts-node ./src/app.ts --config ./tests/e2e/config.toml",
+        "e2e:start-tests": "mocha -r ts-node/register --config ./tests/mocha.e2e.config.json",
         "ob": "javascript-obfuscator ./bundle/app.js --target node --compact true --control-flow-flattening true --dead-code-injection true --output ./ob/app.js",
         "parcel": "parcel build ./dist/app.js --target node --no-minify --no-cache --no-source-maps --out-dir ./bundle",
         "docker:build": "npm run build && npm run parcel && npm run ob && copy-files-from-to --mode docker:build && ts-node ./docker-build/build.ts",
@@ -55,14 +57,15 @@
         "chai-http": "^4.3.0",
         "copy-files-from-to": "^3.1.4",
         "eslint": "^7.7.0",
+        "javascript-obfuscator": "^1.11.0",
         "json-key-remover": "^0.0.2",
         "mocha": "^8.1.2",
         "npm-check-updates": "^7.1.1",
-        "rimraf": "^3.0.2",
-        "ts-node": "^9.0.0",
-        "typescript": "^4.0.2",
         "parcel-bundler": "^1.12.4",
-        "javascript-obfuscator": "^1.11.0"
+        "rimraf": "^3.0.2",
+        "start-server-and-test": "^1.11.3",
+        "ts-node": "^9.0.0",
+        "typescript": "^4.0.2"
     },
     "dependencies": {
         "ajv": "^6.12.4",
