--- a/src/lib/schemes/config.json
+++ b/src/lib/schemes/config.json
@@ -235,6 +235,7 @@
             },
             "required": [
                 "enable",
+                "auth",
                 "listening",
                 "prefix",
                 "proxy",
