--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "up": "ncu && ncu -u && rimraf ./package-lock.json && npm i",
         "ncu": "ncu",
         "pub": "npm run build && npm publish ./dist && rimraf ./dist",
-        "build": "rimraf ./dist && npm run lint && tsc && json-key-remover && copy-files-from-to --mode build",
+        "build": "rimraf ./dist && npm run lint && tsc && json-key-remover && files-copier -e build",
         "start": "node ./dist/app.js --config ./config.toml",
         "start:dev": "ts-node ./src/app.ts --config ./config.toml",
         "start:bundle": "node ./bundle/app.js --config ./config.toml",
@@ -26,7 +26,7 @@
         "parcel": "rimraf ./bundle && npm run parcel:app && npm run parcel:docker-healthcheck",
         "parcel:app": "parcel build ./dist/app.js --target node --no-minify --no-cache --no-source-maps --out-dir ./bundle",
         "parcel:docker-healthcheck": "parcel build ./dist/docker-healthcheck.js --target node --no-minify --no-cache --no-source-maps --out-dir ./bundle",
-        "docker:build": "npm run build && npm run parcel && npm run ob && copy-files-from-to --mode docker:build && ts-node ./docker-build/build.ts",
+        "docker:build": "npm run build && npm run parcel && npm run ob && files-copier -e docker:build && ts-node ./docker-build/build.ts",
         "docker:push:version": "ts-node ./docker-build/push_version.ts",
         "docker:push:latest": "ts-node ./docker-build/push_latest.ts",
         "docker:tag": "ts-node ./docker-build/tag.ts",
@@ -55,16 +55,16 @@
         "@types/koa-logger": "^3.1.1",
         "@types/mocha": "^8.0.3",
         "@types/node": "^14.6.2",
-        "@typescript-eslint/eslint-plugin": "^3.10.1",
-        "@typescript-eslint/parser": "^3.10.1",
+        "@typescript-eslint/eslint-plugin": "^4.0.1",
+        "@typescript-eslint/parser": "^4.0.1",
         "chai": "^4.2.0",
         "chai-http": "^4.3.0",
-        "copy-files-from-to": "^3.1.4",
-        "eslint": "^7.7.0",
+        "eslint": "^7.8.0",
+        "files-copier": "^0.1.1",
         "javascript-obfuscator": "^1.12.0",
         "json-key-remover": "^0.0.2",
         "mocha": "^8.1.3",
-        "npm-check-updates": "^8.0.1",
+        "npm-check-updates": "^8.0.2",
         "parcel-bundler": "^1.12.4",
         "rimraf": "^3.0.2",
         "start-server-and-test": "^1.11.3",
@@ -100,79 +100,36 @@
             "copyFilesSettings"
         ]
     },
-    "copyFiles": [
-        {
-            "from": {
-                "build": "./package-lock.json",
-                "default": {
-                    "skip": true
+    "copier": {
+        "build": {
+            "rewrite": true,
+            "copy": [
+                {
+                    "from": "./package-lock.json",
+                    "to": "./dist/package-lock.json"
                 }
-            },
-            "to": {
-                "build": "./dist/package-lock.json",
-                "default": {
-                    "skip": true
-                }
-            }
+            ]
         },
-        {
-            "from": {
-                "docker:build": "./ob/app.js",
-                "default": {
-                    "skip": true
+        "docker:build": {
+            "rewrite": true,
+            "copy": [
+                {
+                    "from": "./ob/app.js",
+                    "to": "./docker-build/app.js"
+                },
+                {
+                    "from": "./ob/docker-healthcheck.js",
+                    "to": "./docker-build/docker-healthcheck.js"
+                },
+                {
+                    "from": "./dist/package.json",
+                    "to": "./docker-build/package.json"
+                },
+                {
+                    "from": "./dist/package-lock.json",
+                    "to": "./docker-build/package-lock.json"
                 }
-            },
-            "to": {
-                "docker:build": "./docker-build/app.js",
-                "default": {
-                    "skip": true
-                }
-            }
-        },
-        {
-            "from": {
-                "docker:build": "./ob/docker-healthcheck.js",
-                "default": {
-                    "skip": true
-                }
-            },
-            "to": {
-                "docker:build": "./docker-build/docker-healthcheck.js",
-                "default": {
-                    "skip": true
-                }
-            }
-        },
-        {
-            "from": {
-                "docker:build": "./dist/package.json",
-                "default": {
-                    "skip": true
-                }
-            },
-            "to": {
-                "docker:build": "./docker-build/package.json",
-                "default": {
-                    "skip": true
-                }
-            }
-        },
-        {
-            "from": {
-                "docker:build": "./dist/package-lock.json",
-                "default": {
-                    "skip": true
-                }
-            },
-            "to": {
-                "docker:build": "./docker-build/package-lock.json",
-                "default": {
-                    "skip": true
-                }
-            }
+            ]
         }
-    ],
-    "copyFilesSettings": {
-        "whenFileExists": "overwrite"
     }
 }
