--- a/package.json
+++ b/package.json
@@ -54,17 +54,17 @@
         "@types/koa-helmet": "^5.2.0",
         "@types/koa-logger": "^3.1.1",
         "@types/mocha": "^8.0.3",
-        "@types/node": "^14.6.2",
-        "@typescript-eslint/eslint-plugin": "^4.0.1",
-        "@typescript-eslint/parser": "^4.0.1",
+        "@types/node": "^14.6.4",
+        "@typescript-eslint/eslint-plugin": "^4.1.0",
+        "@typescript-eslint/parser": "^4.1.0",
         "chai": "^4.2.0",
         "chai-http": "^4.3.0",
-        "eslint": "^7.8.0",
+        "eslint": "^7.8.1",
         "files-copier": "^0.1.1",
-        "javascript-obfuscator": "^1.12.0",
+        "javascript-obfuscator": "^2.1.0",
         "json-key-remover": "^0.0.2",
         "mocha": "^8.1.3",
-        "npm-check-updates": "^8.0.2",
+        "npm-check-updates": "^8.1.1",
         "parcel-bundler": "^1.12.4",
         "rimraf": "^3.0.2",
         "start-server-and-test": "^1.11.3",
@@ -83,7 +83,8 @@
         "koa-body": "^4.2.0",
         "koa-helmet": "^5.2.0",
         "koa-logger": "^3.2.1",
-        "koa-ts-decorators": "0.0.8"
+        "koa-ts-decorators": "0.0.8",
+        "logger-flx": "^0.1.2"
     },
     "remover": {
         "target": "./package.json",
