--- a/example_config.toml
+++ b/example_config.toml
@@ -36,6 +36,6 @@
         json_strict = true              # строгий режим парсинга json
         methods = ["POST"]              # список методов для парсинга
 
-[docker_healthcheck]    # настрока провеки здоровя для контейнера (утилита git-synker-docker-healthcheck)
+[docker_healthcheck]    # настрока провеки здоровя для контейнера (утилита docker-healthcheck)
     enable = false      # активация
     timeout = 10        # время ожидания
