--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,6 @@ Thumbs.db
 .vscode
 bundle
 ob
-docker-build/app.js
-docker-build/docker-healthcheck.js
+docker-build/app
 docker-build/package.json
-docker-build/package-lock.json
 !docker-build/config.toml
