--- a/docker-build/Dockerfile
+++ b/docker-build/Dockerfile
@@ -1,7 +1,5 @@
 FROM ubuntu:18.04
 
-#ENV APP_RESTARTER "true"
-ENV APP_RESTARTER_VERSION 0.0.7
 ENV APP_NAME "app-template"
 
 RUN apt-get update && \
@@ -15,31 +13,19 @@ RUN apt-get update && \
     rm -f var/cache/apt/archives/partial/*.deb  && \
     rm -f /var/cache/apt/*.bin
 
-RUN npm install app-restarter@${APP_RESTARTER_VERSION} -g && \
-    app-restarter -v
-
 RUN curl -Lo /usr/local/bin/dumb-init https://github.com/Yelp/dumb-init/releases/download/v1.2.2/dumb-init_1.2.2_amd64 && \
     chmod 755 /usr/local/bin/dumb-init
 
 COPY start.sh /start
-COPY healthcheck.sh /healthcheck
 
-RUN chmod +x /start && \
-    chmod +x /healthcheck
+RUN chmod +x /start
 
 ENTRYPOINT ["/usr/local/bin/dumb-init", "--"]
 CMD ["/bin/bash", "/start"]
 
-COPY package.json /${APP_NAME}/package.json
-COPY package-lock.json /${APP_NAME}/package-lock.json
-COPY app.js /${APP_NAME}/app.js
-COPY docker-healthcheck.js /${APP_NAME}/docker-healthcheck.js
+COPY app /${APP_NAME}
 COPY config.toml /${APP_NAME}/config.toml
-
 
 RUN cd /${APP_NAME} && \
     npm install --only=production && \
-    node app.js -v && \
-    node docker-healthcheck.js -v
-
-HEALTHCHECK --interval=10s --timeout=10s --start-period=5s --retries=3 CMD [ "bash", "/healthcheck" ]
+    node app.js -v
