--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
         "build": "rimraf ./dist && npm run lint && tsc && json-key-remover && files-copier -e build",
         "start": "node ./dist/app.js --config ./config.toml",
         "start:dev": "ts-node ./src/app.ts --config ./config.toml",
-        "start:bundle": "node ./bundle/app.js --config ./config.toml",
-        "start:ob": "ts-node ./ob/app.js --config ./config.toml",
         "lint": "eslint \"./src/**/*.{js,ts}\" --quiet --fix && tsc --noEmit",
         "lint:tests": "eslint \"./tests/**/*.{js,ts}\" --quiet --fix",
         "test": "npm run test:unit && npm run test:e2e",
@@ -20,13 +18,7 @@
         "test:e2e": "start-server-and-test e2e:start-server http://localhost:3001/api/healthcheck e2e:start-tests",
         "e2e:start-server": "ts-node ./src/app.ts --config ./tests/e2e/config.toml",
         "e2e:start-tests": "mocha -r ts-node/register --config ./tests/mocha.e2e.config.json",
-        "ob": "rimraf ./ob && npm run ob:app && npm run ob:docker-healthcheck",
-        "ob:app": "javascript-obfuscator ./bundle/app.js --target node --compact true --control-flow-flattening true --dead-code-injection true --output ./ob/app.js",
-        "ob:docker-healthcheck": "javascript-obfuscator ./bundle/docker-healthcheck.js --target node --compact true --control-flow-flattening true --dead-code-injection true --output ./ob/docker-healthcheck.js",
-        "parcel": "rimraf ./bundle && npm run parcel:app && npm run parcel:docker-healthcheck",
-        "parcel:app": "parcel build ./dist/app.js --target node --no-minify --no-cache --no-source-maps --out-dir ./bundle",
-        "parcel:docker-healthcheck": "parcel build ./dist/docker-healthcheck.js --target node --no-minify --no-cache --no-source-maps --out-dir ./bundle",
-        "docker:build": "npm run build && npm run parcel && npm run ob && files-copier -e docker:build && ts-node ./docker-build/build.ts",
+        "docker:build": "npm run build && files-copier -e docker:build && ts-node ./docker-build/build.ts",
         "docker:push:version": "ts-node ./docker-build/push_version.ts",
         "docker:push:latest": "ts-node ./docker-build/push_latest.ts",
         "docker:tag": "ts-node ./docker-build/tag.ts",
@@ -47,44 +39,42 @@
     },
     "homepage": "https://github.com/samurayii/template-project-ts.git#readme",
     "devDependencies": {
-        "@types/chai": "^4.2.12",
+        "@types/chai": "^4.2.14",
         "@types/chai-http": "^4.2.0",
         "@types/chalk": "^2.2.0",
         "@types/find-package-json": "^1.1.1",
-        "@types/koa-helmet": "^5.2.0",
+        "@types/koa-helmet": "^6.0.1",
         "@types/koa-logger": "^3.1.1",
         "@types/mocha": "^8.0.3",
-        "@types/node": "^14.6.4",
-        "@typescript-eslint/eslint-plugin": "^4.1.0",
-        "@typescript-eslint/parser": "^4.1.0",
+        "@types/node": "^14.14.3",
+        "@typescript-eslint/eslint-plugin": "^4.5.0",
+        "@typescript-eslint/parser": "^4.5.0",
         "chai": "^4.2.0",
         "chai-http": "^4.3.0",
-        "eslint": "^7.8.1",
+        "eslint": "^7.12.0",
         "files-copier": "^0.1.1",
-        "javascript-obfuscator": "^2.1.0",
         "json-key-remover": "^0.0.2",
-        "mocha": "^8.1.3",
-        "npm-check-updates": "^8.1.1",
-        "parcel-bundler": "^1.12.4",
+        "mocha": "^8.2.0",
+        "npm-check-updates": "^9.2.2",
         "rimraf": "^3.0.2",
-        "start-server-and-test": "^1.11.3",
+        "start-server-and-test": "^1.11.5",
         "ts-node": "^9.0.0",
-        "typescript": "^4.0.2"
+        "typescript": "^4.0.3"
     },
     "dependencies": {
-        "ajv": "^6.12.4",
-        "axios": "^0.20.0",
+        "ajv": "^6.12.6",
+        "axios": "^0.21.0",
         "chalk": "^4.1.0",
-        "commander": "^6.1.0",
+        "commander": "^6.2.0",
         "di-ts-decorators": "0.0.3",
         "find-package-json": "^1.2.0",
         "json-from-default-schema": "^0.1.4",
-        "jtomler": "^0.0.5",
+        "jtomler": "^0.1.5",
         "koa-body": "^4.2.0",
-        "koa-helmet": "^5.2.0",
+        "koa-helmet": "^6.0.0",
         "koa-logger": "^3.2.1",
         "koa-ts-decorators": "0.0.8",
-        "logger-flx": "^0.1.2"
+        "logger-flx": "^0.1.5"
     },
     "remover": {
         "target": "./package.json",
@@ -114,20 +104,12 @@
             "rewrite": true,
             "copy": [
                 {
-                    "from": "./ob/app.js",
-                    "to": "./docker-build/app.js"
-                },
-                {
-                    "from": "./ob/docker-healthcheck.js",
-                    "to": "./docker-build/docker-healthcheck.js"
+                    "from": "./dist",
+                    "to": "./docker-build/app"
                 },
                 {
                     "from": "./dist/package.json",
                     "to": "./docker-build/package.json"
-                },
-                {
-                    "from": "./dist/package-lock.json",
-                    "to": "./docker-build/package-lock.json"
                 }
             ]
         }
