--- a/src/lib/schemes/config.json
+++ b/src/lib/schemes/config.json
@@ -245,35 +245,11 @@
                 "env",
                 "parsing"
             ]
-        },
-        "docker_healthcheck": {
-            "type": "object",
-            "default": {},
-            "env": "TEMPLATE_DOCKER_HEALTHCHECK",
-            "properties": {
-                "enable": {
-                    "type": "boolean",
-                    "default": false,
-                    "env": "TEMPLATE_DOCKER_HEALTHCHECK_ENABLE",
-                    "enum": [true, false]
-                },
-                "timeout": {
-                    "type": "integer",
-                    "default": 10,
-                    "env": "TEMPLATE_DOCKER_HEALTHCHECK_TIMEOUT",
-                    "minimum": 1
-                }
-            },
-            "required": [
-                "enable",
-                "timeout"
-            ]
         }
     },
     "required": [
         "logger",
         "authorization",
-        "api",
-        "docker_healthcheck"
+        "api"
     ]
 }
