--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "template",
+    "name": "tunneler",
     "version": "0.0.1",
-    "description": "Template for nodejs app with typescript",
+    "description": "Tunneler for ssh",
     "main": "app.js",
-    "docker_image": "samuray/app-template",
+    "docker_image": "samuray/tunneler",
     "scripts": {
         "up": "ncu && ncu -u && rimraf ./package-lock.json && npm i",
         "ncu": "ncu",
@@ -26,7 +26,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/samurayii/template-project-ts.git"
+        "url": "git+https://github.com/samurayii/tunneler.git"
     },
     "keywords": [
         "templates",
@@ -35,15 +35,14 @@
     "author": "Nuzhnov A.A.",
     "license": "ISC",
     "bugs": {
-        "url": "https://github.com/samurayii/template-project-ts/issues"
+        "url": "https://github.com/samurayii/tunneler/issues"
     },
-    "homepage": "https://github.com/samurayii/template-project-ts.git#readme",
+    "homepage": "https://github.com/samurayii/tunneler.git#readme",
     "devDependencies": {
         "@types/chai": "^4.2.14",
         "@types/chai-http": "^4.2.0",
         "@types/chalk": "^2.2.0",
         "@types/find-package-json": "^1.1.1",
-        "@types/koa-helmet": "^6.0.1",
         "@types/koa-logger": "^3.1.1",
         "@types/mocha": "^8.0.3",
         "@types/node": "^14.14.3",
@@ -70,8 +69,6 @@
         "find-package-json": "^1.2.0",
         "json-from-default-schema": "^0.1.4",
         "jtomler": "^0.1.5",
-        "koa-body": "^4.2.0",
-        "koa-helmet": "^6.0.0",
         "koa-logger": "^3.2.1",
         "koa-ts-decorators": "0.0.8",
         "logger-flx": "^0.1.5"
