--- a/src/lib/schemes/config.json
+++ b/src/lib/schemes/config.json
@@ -4,30 +4,30 @@
         "logger": {
             "type": "object",
             "default": {},
-            "env": "TEMPLATE_LOGGER",
+            "env": "TUNNELER_LOGGER",
             "properties": {
                 "enable": {
                     "type": "boolean",
                     "default": true,
-                    "env": "TEMPLATE_LOGGER_ENABLE",
+                    "env": "TUNNELER_LOGGER_ENABLE",
                     "enum": [true, false]
                 },
                 "timestamp": {
                     "type": "string",
                     "default": "time",
-                    "env": "TEMPLATE_LOGGER_TIMESTAMP",
+                    "env": "TUNNELER_LOGGER_TIMESTAMP",
                     "enum": ["none", "time", "full"]
                 },
                 "type": {
                     "type": "boolean",
                     "default": true,
-                    "env": "TEMPLATE_LOGGER_TYPE",
+                    "env": "TUNNELER_LOGGER_TYPE",
                     "enum": [true, false]
                 },
                 "mode": {
                     "type": "string",
                     "default": "prod",
-                    "env": "TEMPLATE_LOGGER_MODE",
+                    "env": "TUNNELER_LOGGER_MODE",
                     "enum": ["dev", "prod", "debug"]
                 }
             },
@@ -41,12 +41,12 @@
         "authorization": {
             "type": "object",
             "default": {},
-            "env": "TEMPLATE_AUTHORIZATION",
+            "env": "TUNNELER_AUTHORIZATION",
             "properties": {
                 "users": {
                     "type": "array",
                     "default": [],
-                    "env": "TEMPLATE_AUTHORIZATION_USERS",
+                    "env": "TUNNELER_AUTHORIZATION_USERS",
                     "minItems": 0
                 }
             },
@@ -57,18 +57,18 @@
         "api": {
             "type": "object",
             "default": {},
-            "env": "TEMPLATE_API",
+            "env": "TUNNELER_API",
             "properties": {
                 "enable": {
                     "type": "boolean",
                     "default": false,
-                    "env": "TEMPLATE_API_ENABLE",
+                    "env": "TUNNELER_API_ENABLE",
                     "enum": [true, false]
                 },
                 "auth": {
                     "type": "boolean",
                     "default": false,
-                    "env": "TEMPLATE_API_AUTH",
+                    "env": "TUNNELER_API_AUTH",
                     "enum": [true, false]
                 },
                 "listening": {
@@ -76,7 +76,7 @@
                     "default": "*:3001",
                     "minLength": 0,
                     "maxLength": 64,
-                    "env": "TEMPLATE_API_LISTENING",
+                    "env": "TUNNELER_API_LISTENING",
                     "pattern": "^([a-zA-Z]{1}[-a-zA-Z0-9.]{0,255}|[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}|\\*)\\:[0-9]{1,5}$"
                 },
                 "prefix": {
@@ -84,153 +84,49 @@
                     "default": "/api",
                     "minLength": 0,
                     "maxLength": 32,
-                    "env": "TEMPLATE_API_PREFIX",
+                    "env": "TUNNELER_API_PREFIX",
                     "pattern": "^(\/|)[a-zA-Z]{0,1}[a-zA-Z0-9\/]{0,63}$"
                 },
                 "proxy": {
                     "type": "boolean",
                     "default": false,
-                    "env": "TEMPLATE_API_PROXY",
+                    "env": "TUNNELER_API_PROXY",
                     "enum": [true, false]
                 },
                 "subdomain_offset": {
                     "type": "integer",
                     "default": 2,
-                    "env": "TEMPLATE_API_SUBDOMAIN_OFFSET",
+                    "env": "TUNNELER_API_SUBDOMAIN_OFFSET",
                     "minimum": 0
                 },
                 "proxy_header": {
                     "type": "string",
                     "default": "X-Forwarded-For",
-                    "env": "TEMPLATE_API_PROXY_HEADER",
+                    "env": "TUNNELER_API_PROXY_HEADER",
                     "minLength": 0,
                     "maxLength": 32
                 },
                 "ips_count": {
                     "type": "integer",
                     "default": 0,
-                    "env": "TEMPLATE_API_IPS_COUNT",
+                    "env": "TUNNELER_API_IPS_COUNT",
                     "minimum": 0
                 },
                 "env": {
                     "type": "string",
                     "default": "development",
-                    "env": "TEMPLATE_API_ENV",
+                    "env": "TUNNELER_API_ENV",
                     "minLength": 0,
                     "maxLength": 32
                 },
                 "keys": {
                     "type": "array",
-                    "env": "TEMPLATE_API_KEYS",
+                    "env": "TUNNELER_API_KEYS",
                     "items": {
                         "type": "string",
                         "minLength": 1
                     },
                     "minItems": 1
-                },
-                "parsing": {
-                    "type": "object",
-                    "default": {},
-                    "env": "TEMPLATE_API_PARSING",
-                    "properties": {
-                        "enable": {
-                            "type": "boolean",
-                            "default": false,
-                            "env": "TEMPLATE_API_PARSING_ENABLE",
-                            "enum": [true, false]
-                        },
-                        "encoding": {
-                            "type": "string",
-                            "default": "utf-8",
-                            "env": "TEMPLATE_API_PARSING_ENCODING",
-                            "minLength": 1,
-                            "maxLength": 32
-                        },
-                        "form_limit": {
-                            "type": "string",
-                            "default": "56kb",
-                            "env": "TEMPLATE_API_PARSING_FORM_LIMIT",
-                            "minLength": 1,
-                            "maxLength": 16,
-                            "pattern": "^[0-9]{1,3}(kb|mb)$"
-                        },
-                        "json_limit": {
-                            "type": "string",
-                            "default": "1mb",
-                            "env": "TEMPLATE_API_PARSING_JSON_LIMIT",
-                            "minLength": 1,
-                            "maxLength": 16,
-                            "pattern": "^[0-9]{1,3}(kb|mb)$"
-                        },
-                        "text_limit": {
-                            "type": "string",
-                            "default": "1mb",
-                            "env": "TEMPLATE_API_PARSING_TEXT_LIMIT",
-                            "minLength": 1,
-                            "maxLength": 16,
-                            "pattern": "^[0-9]{1,3}(kb|mb)$"
-                        },
-                        "text": {
-                            "type": "boolean",
-                            "default": true,
-                            "env": "TEMPLATE_API_PARSING_TEXT",
-                            "enum": [true, false]
-                        },
-                        "json": {
-                            "type": "boolean",
-                            "default": true,
-                            "env": "TEMPLATE_API_PARSING_JSON",
-                            "enum": [true, false]
-                        },
-                        "multipart": {
-                            "type": "boolean",
-                            "default": false,
-                            "env": "TEMPLATE_API_PARSING_MULTIPART",
-                            "enum": [true, false]
-                        },
-                        "include_unparsed": {
-                            "type": "boolean",
-                            "default": false,
-                            "env": "TEMPLATE_API_PARSING_INCLUDE_UNPARSED",
-                            "enum": [true, false]
-                        },
-                        "urlencoded": {
-                            "type": "boolean",
-                            "default": true,
-                            "env": "TEMPLATE_API_PARSING_URLENCODED",
-                            "enum": [true, false]
-                        },
-                        "json_strict": {
-                            "type": "boolean",
-                            "default": true,
-                            "env": "TEMPLATE_API_PARSING_JSON_STRICT",
-                            "enum": [true, false]
-                        },
-                        "methods": {
-                            "type": "array",
-                            "default": ["POST"],
-                            "env": "TEMPLATE_API_PARSING_METHODS",
-                            "items": {
-                                "type": "string",
-                                "enum": ["POST","PUT","PATCH"]
-                            },
-                            "minItems": 1
-                        }
-                    },
-                    "required": [
-                        "enable",
-                        "encoding",
-                        "form_limit",
-                        "json_limit",
-                        "text_limit",
-                        "text",
-                        "json",
-                        "multipart",
-                        "include_unparsed",
-                        "urlencoded",
-                        "json_strict",
-                        "methods"
-                    ]
                 }
             },
             "required": [
@@ -242,8 +138,7 @@
                 "subdomain_offset",
                 "proxy_header",
                 "ips_count",
-                "env",
-                "parsing"
+                "env"
             ]
         }
     },
