--- a/example_config.toml
+++ b/example_config.toml
@@ -22,3 +22,18 @@
     ips_count = 0                       # максимальное количество IP прочитанное из заголовка прокси, по умолчанию 0 (означает бесконечность)
     env = "development"                 # среда для сервера koa
     #keys = []                          # массив подписанных ключей cookie
+
+[[tunnels]]                             # массив настроек туннелей
+    name = ""                           # имя туннеля, должно быть уникальным
+    enable = true                       # активация туннеля
+    user = "user"                       # пользователь
+    password = "password"               # пароль
+    remote_host = ""                    # сервер подключения
+    target_host = "127.0.0.1"           # сервер подключения к порту
+    target_port = 80                    # порт который нужно прокинуть
+    destination_host = "0.0.0.0"        # сервер на котором будет открыть порт
+    destination_port = 80               # открываемый порт
+    ssh_port = 22                       # порт подключения ssh
+    critical = false                    # критичность канала
+    restart = false                     # перезапуск канала (игнорируется если critical=true)
+    restart_interval = 10               # интервал перезапуска (игнорируется если restart=false)
